--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,12 @@
   <base href="./" />
 
   <link rel="manifest" href="./manifest.json" />
-  <link rel="stylesheet" href="./styles.css" />
+
+  <!-- ✅ CACHE-BUSTER: força baixar o styles.css novo -->
+  <link rel="stylesheet" href="./styles.css?v=20260215-0248" />
 
   <!-- (Opcional) ajuda a ver que o index novo entrou -->
-  <meta name="rcf-index" content="vCLEAN-1" />
+  <meta name="rcf-index" content="vCLEAN-2" />
 </head>
 
 <body>
