--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,13 @@
 <!-- FILE: /app/index.html
-     RControl Factory — index.html (vCLEAN-1+ENGINE + VENDOR ZIP + AGENT ZIP)
+     RControl Factory — index.html (vCLEAN-1+ENGINE + VENDOR ZIP)
      PATCH:
-     - mantém vendor_loader.js + vendor_health.js + zip_vault.js
-     - adiciona agent_zip_bridge.js (import ZIP pro Agent)
+     - remove "./vendor/jszip.min.js" (não existe)
+     - adiciona "./js/core/vendor_loader.js" (carrega JSZip local OU CDN)
+     - mantém vendor_health.js
+     - mantém zip_vault.js (import ZIP + PDFs)
+     FIX (BOTÃO SUMINDO):
+     - zip_vault.js + agent_zip_bridge.js AGORA carregam DEPOIS do app.js
+       (porque o app.js cria os slots/UI onde o zip_vault injeta botões)
 -->
 <!doctype html>
 <html lang="pt-BR">
@@ -19,7 +24,7 @@
   <link rel="stylesheet" href="./styles.css" />
 
   <!-- (Opcional) ajuda a ver que o index novo entrou -->
-  <meta name="rcf-index" content="vCLEAN-1+ENGINE+VENDORZIP+AGENTZIP" />
+  <meta name="rcf-index" content="vCLEAN-1+ENGINE+VENDORZIP" />
 </head>
 
 <body>
@@ -58,18 +63,17 @@
       async function boot(){
         log("BOOT: starting… base=", document.baseURI);
 
+        // =========================================================
+        // 1) CORE + ENGINE (antes do app.js)
+        // =========================================================
         const modules = [
           "./js/core/logger.js",
           "./js/core/stability_guard.js",
           "./js/core/storage.js",
 
-          /* ✅ VENDOR: Loader (JSZip local OU CDN) + health + Zip Vault (ZIP/PDF import) */
+          /* ✅ VENDOR: Loader (JSZip local OU CDN) + health */
           "./js/core/vendor_loader.js",
           "./js/core/vendor_health.js",
-          "./js/core/zip_vault.js",
-
-          /* ✅ AGENT: Import ZIP (Replit Agent) -> KV (IDB/local fallback) */
-          "./js/core/agent_zip_bridge.js",
 
           "./js/core/github_sync.js",
           "./js/core/vfs_overrides.js",
@@ -109,6 +113,9 @@
           }
         }
 
+        // =========================================================
+        // 2) app.js (cria UI/slots)
+        // =========================================================
         try {
           await loadScript("./app.js");
           try { window.RCF_LOGGER?.push?.("BOOT", "app.js loaded ✅ ./app.js"); } catch {}
@@ -116,6 +123,26 @@
         } catch (e) {
           try { window.RCF_LOGGER?.push?.("ERR", "app.js missing/failed ❌ ./app.js :: " + (e.message||e)); } catch {}
           log("app.js missing/failed ❌", (e.message||e));
+        }
+
+        // =========================================================
+        // 3) ZIP/UI modules (depois do app.js)
+        //    -> garante que o zip_vault encontra o slot e injeta o botão
+        // =========================================================
+        const afterApp = [
+          "./js/core/zip_vault.js",
+          "./js/core/agent_zip_bridge.js"
+        ];
+
+        for (const src of afterApp) {
+          try {
+            await loadScript(src);
+            try { window.RCF_LOGGER?.push?.("BOOT", "module loaded ✅ " + src); } catch {}
+            log("module loaded ✅", src);
+          } catch (e) {
+            try { window.RCF_LOGGER?.push?.("WARN", "module missing/failed ❌ " + src + " :: " + (e.message||e)); } catch {}
+            log("module missing/failed ❌", src, (e.message||e));
+          }
         }
 
         // SW register (guard contra duplicidade)
