--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,8 @@
 <!-- FILE: /app/index.html
-     RControl Factory — index.html (vCLEAN-1+ENGINE + VENDOR ZIP)
+     RControl Factory — index.html (vCLEAN-1+ENGINE + VENDOR ZIP + PAGES LINKS)
      PATCH:
-     - remove "./vendor/jszip.min.js" (não existe)
-     - adiciona "./js/core/vendor_loader.js" (carrega JSZip local OU CDN)
-     - mantém vendor_health.js
-     - mantém zip_vault.js (import ZIP + PDFs)
-     FIX (BOTÃO SUMINDO):
-     - zip_vault.js + agent_zip_bridge.js AGORA carregam DEPOIS do app.js
-       (porque o app.js cria os slots/UI onde o zip_vault injeta botões)
-
-     DEGRAU 3 (AUTO EXTRA-MODULES):
-     - ✅ Auto-installer SAFE: injeta 2 extra modules no rcf:boot:extra_modules
-       ./js/core/agent_tools_panel.js
-       ./js/core/agent_scanmap.js
-     - ✅ Reload automático 1x (sem loop) só quando mudar
+     - adiciona "./js/core/pages_links.js" (gera link PWA + abre fora do srcdoc + deploy hook)
+     - mantém o resto igual ao teu padrão
 -->
 <!doctype html>
 <html lang="pt-BR">
@@ -23,14 +12,12 @@
   <title>RCF</title>
   <meta name="theme-color" content="#0b1020" />
 
-  <!-- PADRÃO: base relativo (Pages/subpath safe) -->
   <base href="./" />
 
   <link rel="manifest" href="./manifest.json" />
   <link rel="stylesheet" href="./styles.css" />
 
-  <!-- (Opcional) ajuda a ver que o index novo entrou -->
-  <meta name="rcf-index" content="vCLEAN-1+ENGINE+VENDORZIP+EXTRAS3" />
+  <meta name="rcf-index" content="vCLEAN-1+ENGINE+VENDORZIP+PAGESLINKS" />
 </head>
 
 <body>
@@ -40,17 +27,8 @@
     <div style="padding:14px;font-family:system-ui">Carregando…</div>
   </div>
 
-  <!-- =========================================================
-    BOOT LOADER (CLEAN)
-    - NÃO cria UI/overlay (isso fica no app.js)
-    - NÃO captura logs (logger.js oficial manda pro Storage/UI)
-    - Evita SW register duplicado
-    - ✅ Evita BOOT duplicado do index (iOS/SW edge cases)
-    - ✅ DEGRAU 3: garante extra_modules (tools_panel + scanmap)
-  ========================================================== -->
   <script>
     (function () {
-      // ✅ Guard: evita carregar tudo 2x em edge cases
       if (window.__RCF_INDEX_BOOTED__) return;
       window.__RCF_INDEX_BOOTED__ = true;
 
@@ -67,79 +45,14 @@
         });
       }
 
-      // =========================================================
-      // DEGRAU 3 — AUTO EXTRA MODULES (SAFE + 1 reload)
-      // =========================================================
-      function ensureExtraModules(){
-        const KEY = "rcf:boot:extra_modules";
-        const GUARD = "rcf:extra_modules_installed:v1";
-        const MUST = [
-          "./js/core/agent_tools_panel.js",
-          "./js/core/agent_scanmap.js"
-        ];
-
-        // evita loop de reload
-        try {
-          if (sessionStorage.getItem(GUARD) === "1") return { changed:false, already:true };
-        } catch {}
-
-        let cur = [];
-        try {
-          const raw = localStorage.getItem(KEY);
-          const j = raw ? JSON.parse(raw) : [];
-          cur = Array.isArray(j) ? j : [];
-        } catch {
-          cur = [];
-        }
-
-        // normaliza strings
-        const norm = (p) => String(p || "").trim();
-        const set = new Set(cur.map(norm).filter(Boolean));
-
-        let changed = false;
-        for (const p of MUST) {
-          const x = norm(p);
-          if (!set.has(x)) { set.add(x); changed = true; }
-        }
-
-        if (changed) {
-          const next = Array.from(set).sort((a,b)=>a.localeCompare(b));
-          try { localStorage.setItem(KEY, JSON.stringify(next)); } catch {}
-          try { sessionStorage.setItem(GUARD, "1"); } catch {}
-          return { changed:true, list: next };
-        }
-
-        // marcou como ok (sem precisar reload)
-        try { sessionStorage.setItem(GUARD, "1"); } catch {}
-        return { changed:false, list: Array.from(set) };
-      }
-
       async function boot(){
         log("BOOT: starting… base=", document.baseURI);
 
-        // ✅ roda antes de qualquer coisa que dependa do boot extra
-        try {
-          const r = ensureExtraModules();
-          if (r && r.changed) {
-            log("DEGRAU3: extra_modules atualizado -> reload 1x", r.list || []);
-            // 1 reload só (SAFE)
-            try { location.reload(); return; } catch {}
-          } else {
-            log("DEGRAU3: extra_modules ok");
-          }
-        } catch (e) {
-          log("DEGRAU3: falhou (ignorado)", (e && e.message) ? e.message : e);
-        }
-
-        // =========================================================
-        // 1) CORE + ENGINE (antes do app.js)
-        // =========================================================
         const modules = [
           "./js/core/logger.js",
           "./js/core/stability_guard.js",
           "./js/core/storage.js",
 
-          /* ✅ VENDOR: Loader (JSZip local OU CDN) + health */
           "./js/core/vendor_loader.js",
           "./js/core/vendor_health.js",
 
@@ -161,11 +74,13 @@
           "./js/core/settings_cleanup.js",
           "./js/core/injector.js",
 
-          /* ✅ ENGINE (NOVO) */
           "./js/engine/template_registry.js",
           "./js/engine/module_registry.js",
           "./js/engine/builder.js",
           "./js/engine/engine.js",
+
+          // ✅ 3º degrau: PWA link + abrir certo + deploy hook
+          "./js/core/pages_links.js",
 
           "./js/admin.github.js"
         ];
@@ -181,9 +96,6 @@
           }
         }
 
-        // =========================================================
-        // 2) app.js (cria UI/slots)
-        // =========================================================
         try {
           await loadScript("./app.js");
           try { window.RCF_LOGGER?.push?.("BOOT", "app.js loaded ✅ ./app.js"); } catch {}
@@ -193,10 +105,6 @@
           log("app.js missing/failed ❌", (e.message||e));
         }
 
-        // =========================================================
-        // 3) ZIP/UI modules (depois do app.js)
-        //    -> garante que o zip_vault encontra o slot e injeta o botão
-        // =========================================================
         const afterApp = [
           "./js/core/zip_vault.js",
           "./js/core/agent_zip_bridge.js"
@@ -213,7 +121,6 @@
           }
         }
 
-        // SW register (guard contra duplicidade)
         try {
           if (!window.__RCF_SW_REGISTERED__ && "serviceWorker" in navigator) {
             window.__RCF_SW_REGISTERED__ = true;
