--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,8 @@
 <!-- FILE: /app/index.html
-     RControl Factory — index.html (vCLEAN-1+ENGINE + VENDOR ZIP + PAGES LINKS + EXTRAS3 + SWVER)
-     PATCH:
-     - mantém DEGRAU 3 (auto extra-modules SAFE + 1 reload)
-     - mantém ZIP modules carregando DEPOIS do app.js (evita botão sumir)
-     - adiciona/garante "./js/core/pages_links.js"
-     - mantém base "./" e guards anti-boot duplicado
-     - ✅ SW VERSIONED REGISTER (iOS cache breaker): ./sw.js?v=BUILD
+     RControl Factory — index.html (vCLEAN-1+ENGINE + VENDOR ZIP + PAGES LINKS + EXTRAS3A)
+     PATCH A (BOOT CLEANUP):
+     - DEGRAU 3: lista oficial MUST inclui runtime + scanmap + bridge + tools_panel
+     - mantém 1 reload no máximo
 -->
 <!doctype html>
 <html lang="pt-BR">
@@ -14,14 +11,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>RCF</title>
   <meta name="theme-color" content="#0b1020" />
-
-  <!-- PADRÃO: base relativo (Pages/subpath safe) -->
   <base href="./" />
-
   <link rel="manifest" href="./manifest.json" />
   <link rel="stylesheet" href="./styles.css" />
-
-  <meta name="rcf-index" content="vCLEAN-1+ENGINE+VENDORZIP+PAGESLINKS+EXTRAS3+SWVER" />
+  <meta name="rcf-index" content="vCLEAN-1+ENGINE+VENDORZIP+PAGESLINKS+EXTRAS3A" />
 </head>
 
 <body>
@@ -33,13 +26,8 @@
 
   <script>
     (function () {
-      // ✅ Guard: evita carregar tudo 2x em edge cases
       if (window.__RCF_INDEX_BOOTED__) return;
       window.__RCF_INDEX_BOOTED__ = true;
-
-      // ✅ BUILD do SW (troque quando quiser forçar “quebra-cache”)
-      // Dica: mude só esse valor e publique -> iPhone pega na hora.
-      const RCF_SW_BUILD = "RCF_SW_BUILD_2026_02_22_01";
 
       function log(){ try { console.log.apply(console, ["[RCF/index]"].concat([].slice.call(arguments))); } catch(e){} }
 
@@ -61,11 +49,12 @@
         const KEY = "rcf:boot:extra_modules";
         const GUARD = "rcf:extra_modules_installed:v1";
         const MUST = [
-          "./js/core/agent_tools_panel.js",
-          "./js/core/agent_scanmap.js"
+          "./js/core/agent_runtime.js",
+          "./js/core/agent_scanmap.js",
+          "./js/core/admin_scanmap_bridge.js",
+          "./js/core/agent_tools_panel.js"
         ];
 
-        // evita loop de reload
         try {
           if (sessionStorage.getItem(GUARD) === "1") return { changed:false, already:true };
         } catch {}
@@ -96,7 +85,6 @@
           return { changed:true, list };
         }
 
-        // marcou como ok (sem precisar reload)
         try { sessionStorage.setItem(GUARD, "1"); } catch {}
         return { changed:false, list };
       }
@@ -104,7 +92,6 @@
       async function boot(){
         log("BOOT: starting… base=", document.baseURI);
 
-        // ✅ roda antes de qualquer coisa que dependa do boot extra
         try {
           const r = ensureExtraModules();
           if (r && r.changed) {
@@ -117,15 +104,11 @@
           log("DEGRAU3: falhou (ignorado)", (e && e.message) ? e.message : e);
         }
 
-        // =========================================================
-        // 1) CORE + ENGINE (antes do app.js)
-        // =========================================================
         const modules = [
           "./js/core/logger.js",
           "./js/core/stability_guard.js",
           "./js/core/storage.js",
 
-          /* ✅ VENDOR */
           "./js/core/vendor_loader.js",
           "./js/core/vendor_health.js",
 
@@ -147,13 +130,11 @@
           "./js/core/settings_cleanup.js",
           "./js/core/injector.js",
 
-          /* ✅ ENGINE */
           "./js/engine/template_registry.js",
           "./js/engine/module_registry.js",
           "./js/engine/builder.js",
           "./js/engine/engine.js",
 
-          /* ✅ PWA Links / Pages Hook */
           "./js/core/pages_links.js",
 
           "./js/admin.github.js"
@@ -170,9 +151,6 @@
           }
         }
 
-        // =========================================================
-        // 2) app.js (cria UI/slots)
-        // =========================================================
         try {
           await loadScript("./app.js");
           try { window.RCF_LOGGER?.push?.("BOOT", "app.js loaded ✅ ./app.js"); } catch {}
@@ -182,9 +160,6 @@
           log("app.js missing/failed ❌", (e.message||e));
         }
 
-        // =========================================================
-        // 3) ZIP/UI modules (depois do app.js)
-        // =========================================================
         const afterApp = [
           "./js/core/zip_vault.js",
           "./js/core/agent_zip_bridge.js"
@@ -201,22 +176,13 @@
           }
         }
 
-        // =========================================================
-        // 4) SW register (versionado) — quebra-cache iOS
-        // =========================================================
         try {
           if (!window.__RCF_SW_REGISTERED__ && "serviceWorker" in navigator) {
             window.__RCF_SW_REGISTERED__ = true;
-
-            const swUrl = "./sw.js?v=" + encodeURIComponent(RCF_SW_BUILD);
-
-            navigator.serviceWorker.register(swUrl, { scope: "./" })
-              .then((reg) => {
-                try { window.RCF_LOGGER?.push?.("BOOT", "sw register: ok ✅ " + swUrl); } catch {}
-                log("sw register ok", swUrl);
-
-                // tenta puxar update imediatamente (ajuda no iOS)
-                try { reg.update?.(); } catch {}
+            navigator.serviceWorker.register("./sw.js", { scope: "./" })
+              .then(() => {
+                try { window.RCF_LOGGER?.push?.("BOOT", "sw register: ok (scope ./)"); } catch {}
+                log("sw register ok");
               })
               .catch((e) => {
                 try { window.RCF_LOGGER?.push?.("WARN", "sw register: fail/ignored :: " + (e?.message||e)); } catch {}
